# c45-decision-tree-algorithm

./: README.md  data.csv  dummy.py  pyproject.toml  rules.txt  run-app.sh
c45_decision_tree_algorithm/: app.py  c45_algorithm.py  directories.py  generate_data.py  predictions.py  preprocessing.py
data/raw/: household_data.csv
data/transformed/: transformed_data.csv
decision_tree_algorithm/: app.py  c45_algorithm.py  cities.py  generate_data.py  get_data.py  predictions.py  preprocessing.py
dummy/: c45.py  predictions.py
misc/: c45.py  predictions.py
