[tool.poetry]
name = "c45_decision_tree_algorithm"
version = "0.1.0"
description = "C4.5 Algorithm Implementation"
authors = ["se7en"]
readme = "README.md"
packages = [{include = "c45_decision_tree_algorithm"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
streamlit = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
